--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -30,7 +30,12 @@
 
     <!-- Instana Website Tracking -->
     <script type="text/javascript" src="assets/monitoring/instana.js"></script>
-    <script defer="" crossorigin="anonymous" src="https://eum.instana.io/eum.min.js"></script>
+    <script
+      defer=""
+      crossorigin="anonymous"
+      src="https://eum.instana.io/eum.min.js"
+      integrity="IW0hslXBMQDTSeex7fkK7SAcsZnHXHw39CwpTUR+fH3mEaTiL/l/yQ/tYyZUI6ue"
+    ></script>
     <!-- angular service worker -->
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#1976d2" />
